welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:10: error: type mismatch;
 found   : Unit
 required: Int
    if(b==c){
    ^greenTicket:9: error: type mismatch;
 found   : Unit
 required: Int
  if(a==b){
  ^