welcome.lessons.welcome.bat.bool2.GreenTicket.scala.code
def greenTicket(a:Int, b:Int, c:Int):Int = {
  if(a!=b){
    if(b!=c){
      if(a!=c){
    		return 0
      }else{return 10}
    }else{return 10}
  }else{return 10}
  if(a==b){
    if(b==c){
    	return 20
    }
  }
}